--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Page</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+  </head>
+  <body>
     Ayoub Draid
-</body>
+    <a href="/Dashboard.html" target="_blank"><br />Dashboard</a>
+    <br><a href="/login.html" target="_blank">Sign In</a>
+    <br><a href="/login.html" target="_blank">Sign <span>Up</span></a>
+  </body>
 </html>
