--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     Ayoub Draid
-    <a href="/Dashboard.html" target="_blank"><br />Dashboard</a>
+    <a href="/test/Dashboard.html" target="_blank"><br />Dashboard</a>
     <br><a href="/login.html" target="_blank">Sign In</a>
     <br><a href="/login.html" target="_blank">Sign <span>Up</span></a>
   </body>
